RESOLVED FIXED276499
REGRESSION (280643@main): [ iOS EWS ] 11x media* (layout-tests) are constant/flaky failures
https://bugs.webkit.org/show_bug.cgi?id=276499
Summary REGRESSION (280643@main): [ iOS EWS ] 11x media* (layout-tests) are constant/...
Dawn Morningstar
Reported 2024-07-11 12:27:18 PDT
compositing/geometry/video-opacity-overlay.html [ Pass Failure ] compositing/layers-inside-overflow-scroll.html [ Pass Failure ] compositing/overflow/overflow-compositing-descendant.html [ Pass Failure ] compositing/overflow/scroll-ancestor-update.html [ Pass Failure ] compositing/reflections/load-video-in-reflection.html [ Pass Failure ] compositing/self-painting-layers.html [ Pass Failure ] media/media-captions-no-controls.html [ Failure ] media/video-aspect-ratio.html [ Failure ] media/video-canvas-alpha.html [ Failure ] media/video-layer-crash.html [ Failure ] media/video-zoom.html [ Failure ] These 11x layout tests started failing after 280643@main, they're also slowing down EWS. Usually from the diff I would suggest rebaslines, but since some of these are flaky, rebasline is not an option. HISTORY: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=compositing%2Fgeometry%2Fvideo-opacity-overlay.html&test=compositing%2Flayers-inside-overflow-scroll.html&test=compositing%2Foverflow%2Foverflow-compositing-descendant.html&test=compositing%2Foverflow%2Fscroll-ancestor-update.html&test=compositing%2Freflections%2Fload-video-in-reflection.html&test=compositing%2Fself-painting-layers.html&test=media%2Fmedia-captions-no-controls.html&test=media%2Fvideo-aspect-ratio.html&test=media%2Fvideo-canvas-alpha.html&test=media%2Fvideo-layer-crash.html&test=media%2Fvideo-zoom.html&platform=ios DIFF: --- /Volumes/Data/worker/Apple-iPadOS-17-Simulator-Debug-WK2-Tests/build/layout-test-results/media/video-layer-crash-expected.txt +++ /Volumes/Data/worker/Apple-iPadOS-17-Simulator-Debug-WK2-Tests/build/layout-test-results/media/video-layer-crash-actual.txt @@ -18,5 +18,13 @@ RenderBR {BR} at (210,322) size 0x19 layer at (12,64) size 206x156 RenderVideo {VIDEO} at (4,20) size 206x156 [border: (3px solid #FF0000)] +layer at (15,67) size 200x150 + RenderBlock (relative positioned) {DIV} at (3,3) size 200x150 +layer at (15,67) size 200x150 + RenderBlock (positioned) {DIV} at (0,0) size 200x150 layer at (12,225) size 206x156 RenderVideo {VIDEO} at (4,181) size 206x156 [border: (3px solid #FF0000)] +layer at (15,228) size 200x150 + RenderBlock (relative positioned) {DIV} at (3,3) size 200x150 +layer at (15,228) size 309x150 + RenderBlock (positioned) {DIV} at (0,0) size 309x150 DIFF-URL: https://build.webkit.org/results/Apple-iPadOS-17-Simulator-Debug-WK2-Tests/280643@main%20(1864)/media/video-layer-crash-diff.txt Test-run: https://build.webkit.org/results/Apple-iPadOS-17-Simulator-Debug-WK2-Tests/280643@main%20(1864)/results.html
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-11 12:28:15 PDT
Dawn Morningstar
Comment 2 2024-07-11 12:51:15 PDT
EWS
Comment 3 2024-07-11 12:54:09 PDT
Test gardening commit 280871@main (1be5578a5695): <https://commits.webkit.org/280871@main> Reviewed commits have been landed. Closing PR #30712 and removing active labels.
Eric Carlson
Comment 4 2024-07-12 13:21:12 PDT
EWS
Comment 5 2024-07-18 04:37:12 PDT
Committed 281082@main (8d9d83d24cd5): <https://commits.webkit.org/281082@main> Reviewed commits have been landed. Closing PR #30758 and removing active labels.
EWS
Comment 6 2024-07-19 18:04:30 PDT
Committed 280938.88@safari-7619-branch (059cf9ccb78c): <https://commits.webkit.org/280938.88@safari-7619-branch> Reviewed commits have been landed. Closing PR #1448 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.