Cherry-pick 8d9d83d24cd5. rdar://131558048

REGRESSION (280643@main): [ iOS EWS ] 11x media* (layout-tests) are constant/flaky failures
    https://bugs.webkit.org/show_bug.cgi?id=276499
    rdar://131558048

    Reviewed by Jer Noble.

    Don't create the text track representation element until we know it will be used.

    * LayoutTests/platform/ios/TestExpectations:
    * LayoutTests/platform/ios/compositing/video/video-object-fit-expected.txt: Removed.
    * LayoutTests/platform/ios/compositing/video/video-object-position-expected.txt:
    * LayoutTests/platform/mac-ventura/compositing/video/video-object-fit-expected.txt: Removed.
    * LayoutTests/platform/mac-ventura/compositing/video/video-object-position-expected.txt: Removed.
    * LayoutTests/platform/mac-wk2/compositing/video/video-object-fit-expected.txt: Removed.
    * LayoutTests/platform/mac-wk2/compositing/video/video-object-position-expected.txt: Removed.
    * Source/WebCore/html/HTMLMediaElement.cpp:
    (WebCore::HTMLMediaElement::setTextTrackRepresentataionBounds):
    (WebCore::HTMLMediaElement::setRequiresTextTrackRepresentation):
    * Source/WebCore/html/HTMLMediaElement.h:

    Canonical link: https://commits.webkit.org/281082@main

Canonical link: https://commits.webkit.org/280938.88@safari-7619-branch